--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -14,6 +14,8 @@ line:
     channelSecret: 23a8f476fd2111b9920d2a7b66d14118
     handler:
       path: /webhook
+jwt:
+  secret: mumoo
 spring:
   h2:
     console:
